--- a/index.html
+++ b/index.html
@@ -1,107 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Course Catalog</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+<script>
+  // Sample course data (replace with your actual course data)
+  const courses = [
+    { code: "CSCI101", title: "Introduction to Computer Science", description: "An introductory course to computer science.", units: 3, prerequisites: "None" },
+    { code: "MATH201", title: "Calculus I", description: "A course covering the basics of calculus.", units: 4, prerequisites: "MATH101" },
+    // Add more courses here
+  ];
 
-    #courseList {
-      max-width: 600px;
-      width: 100%;
-    }
-
-    .course-card {
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      padding: 10px;
-      margin: 10px;
-      cursor: pointer;
-    }
-
-    .course-card:hover {
-      background-color: #f0f0f0;
-    }
-
-    .course-description {
-      display: none;
-    }
-
-    #searchInput {
-      width: 100%;
-      max-width: 600px;
-      padding: 10px;
-      margin: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
-  </style>
-</head>
-<body>
-  <input type="text" id="searchInput" placeholder="Search for courses...">
-  <div id="courseList">
-    <!-- Course cards will be dynamically added here -->
-  </div>
-
-  <script>
-    // Sample course data (replace with your actual course data)
-    const courses = [
-      { code: "CSCI101", title: "Introduction to Computer Science", description: "An introductory course to computer science.", units: 3, prerequisites: "None" },
-      { code: "MATH201", title: "Calculus I", description: "A course covering the basics of calculus.", units: 4, prerequisites: "MATH101" },
-      // Add more courses here
-    ];
-
-    // Function to generate course cards
-    function generateCourseCards() {
-      const courseList = document.getElementById('courseList');
-      courses.forEach(course => {
-        const card = document.createElement('div');
-        card.classList.add('course-card');
-        card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites}</div>`;
-        card.addEventListener('click', () => {
-          const description = card.querySelector('.course-description');
-          if (description.style.display === 'block') {
-            description.style.display = 'none';
-          } else {
-            description.style.display = 'block';
-          }
-        });
-        courseList.appendChild(card);
-      });
-    }
-
-    // Function to filter courses based on search input
-    function filterCourses() {
-      const searchInput = document.getElementById('searchInput').value.toLowerCase();
-      const filteredCourses = courses.filter(course =>
-        course.code.toLowerCase().includes(searchInput) ||
-        course.title.toLowerCase().includes(searchInput)
-      );
-      courses.forEach(course => {
-        const card = document.querySelector(`[data-code="${course.code}"]`);
-        if (filteredCourses.includes(course)) {
-          card.style.display = 'block';
+  // Function to generate course cards
+  function generateCourseCards() {
+    const courseList = document.getElementById('courseList');
+    courses.forEach(course => {
+      const card = document.createElement('div');
+      card.classList.add('course-card');
+      card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites}</div>`;
+      card.addEventListener('click', () => {
+        const description = card.querySelector('.course-description');
+        if (description.style.display === 'block') {
+          description.style.display = 'none';
         } else {
-          card.style.display = 'none';
+          description.style.display = 'block';
         }
       });
+      courseList.appendChild(card);
+    });
+  }
+
+  // Function to filter courses based on search input
+  function filterCourses() {
+    const searchInput = document.getElementById('searchInput').value.toLowerCase();
+    const filteredCourses = courses.filter(course =>
+      course.code.toLowerCase().includes(searchInput) ||
+      course.title.toLowerCase().includes(searchInput)
+    );
+    const courseCards = document.querySelectorAll('.course-card');
+    courseCards.forEach(card => {
+      const courseCode = card.querySelector('div').textContent.split(' - ')[0];
+      if (filteredCourses.some(course => course.code === courseCode)) {
+        card.style.display = 'block';
+      } else {
+        card.style.display = 'none';
+      }
+    });
+  }
+
+  // Initial generation of course cards
+  generateCourseCards();
+
+  // Event listener for search input
+  document.getElementById('searchInput').addEventListener('keydown', (event) => {
+    if (event.key === 'Enter') {
+      filterCourses();
     }
-
-    // Initial generation of course cards
-    generateCourseCards();
-
-    // Event listener for search input
-    document.getElementById('searchInput').addEventListener('input', filterCourses);
-  </script>
-</body>
-</html>
+  });
+</script>
