--- a/index.html
+++ b/index.html
@@ -28,14 +28,10 @@
   // Function to filter courses based on search input
   function filterCourses() {
     const searchInput = document.getElementById('searchInput').value.toLowerCase();
-    const filteredCourses = courses.filter(course =>
-      course.code.toLowerCase().includes(searchInput) ||
-      course.title.toLowerCase().includes(searchInput)
-    );
     const courseCards = document.querySelectorAll('.course-card');
     courseCards.forEach(card => {
-      const courseTitle = card.querySelector('div').textContent.split(' - ')[1];
-      if (filteredCourses.some(course => course.title === courseTitle)) {
+      const courseTitle = card.querySelector('div').textContent.split(' - ')[1].toLowerCase();
+      if (courseTitle.includes(searchInput)) {
         card.style.display = 'block';
       } else {
         card.style.display = 'none';
