--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   <title>Course Catalog</title>
   <style>
     /* CSS styles remain the same */
+    .course-card {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    .course-header {
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .course-description {
+      display: none;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
