--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Course Catalog</title>
   <style>
-    /* CSS styles remain the same */
+    /* CSS styles */
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    #courseList {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     .course-card {
       border: 1px solid #ccc;
       border-radius: 5px;
       padding: 10px;
       margin: 10px;
       cursor: pointer;
+      max-width: 400px; /* Adjust max-width as needed */
     }
 
     .course-header {
@@ -32,6 +49,7 @@
   </div>
 
   <script>
+    // JavaScript code
     // Function to generate course cards
     function generateCourseCards(courses) {
       const courseList = document.getElementById('courseList');
