--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Course Catalog</title>
   <style>
-    /* CSS styles */
     body {
       display: flex;
       flex-direction: column;
@@ -17,9 +16,8 @@
     }
 
     #courseList {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      max-width: 600px;
+      width: 100%;
     }
 
     .course-card {
@@ -28,17 +26,24 @@
       padding: 10px;
       margin: 10px;
       cursor: pointer;
-      max-width: 400px; /* Adjust max-width as needed */
     }
 
-    .course-header {
-      font-weight: bold;
-      cursor: pointer;
+    .course-card:hover {
+      background-color: #f0f0f0;
     }
 
     .course-description {
       display: none;
-      margin-top: 10px;
+    }
+
+    #searchInput {
+      width: 100%;
+      max-width: 600px;
+      padding: 10px;
+      margin: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
     }
   </style>
 </head>
@@ -49,31 +54,28 @@
   </div>
 
   <script>
-    // JavaScript code
+    // Sample course data (replace with your actual course data)
+    const courses = [
+      { code: "CSCI101", title: "Introduction to Computer Science", description: "An introductory course to computer science.", units: 3, prerequisites: "None" },
+      { code: "MATH201", title: "Calculus I", description: "A course covering the basics of calculus.", units: 4, prerequisites: "MATH101" },
+      // Add more courses here
+    ];
+
     // Function to generate course cards
-    function generateCourseCards(courses) {
+    function generateCourseCards() {
       const courseList = document.getElementById('courseList');
       courses.forEach(course => {
         const card = document.createElement('div');
         card.classList.add('course-card');
-
-        const cardHeader = document.createElement('div');
-        cardHeader.classList.add('course-header');
-        cardHeader.textContent = `${course.department}${course.id} - ${course.title}`;
-        card.appendChild(cardHeader);
-
-        const cardDescription = document.createElement('div');
-        cardDescription.classList.add('course-description');
-        cardDescription.innerHTML = `<strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}`;
-        card.appendChild(cardDescription);
-        
-        // Hide description by default
-        cardDescription.style.display = 'none';
-
-        cardHeader.addEventListener('click', () => {
-          cardDescription.style.display = cardDescription.style.display === 'block' ? 'none' : 'block';
+        card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites}</div>`;
+        card.addEventListener('click', () => {
+          const description = card.querySelector('.course-description');
+          if (description.style.display === 'block') {
+            description.style.display = 'none';
+          } else {
+            description.style.display = 'block';
+          }
         });
-
         courseList.appendChild(card);
       });
     }
@@ -81,10 +83,13 @@
     // Function to filter courses based on search input
     function filterCourses() {
       const searchInput = document.getElementById('searchInput').value.toLowerCase();
-      const courseCards = document.querySelectorAll('.course-card');
-      courseCards.forEach(card => {
-        const courseTitle = card.querySelector('.course-header').textContent.toLowerCase();
-        if (courseTitle.includes(searchInput)) {
+      const filteredCourses = courses.filter(course =>
+        course.code.toLowerCase().includes(searchInput) ||
+        course.title.toLowerCase().includes(searchInput)
+      );
+      courses.forEach(course => {
+        const card = document.querySelector(`[data-code="${course.code}"]`);
+        if (filteredCourses.includes(course)) {
           card.style.display = 'block';
         } else {
           card.style.display = 'none';
@@ -92,13 +97,8 @@
       });
     }
 
-    // Fetch course data from JSON file
-    fetch('courses.json')
-      .then(response => response.json())
-      .then(courses => {
-        generateCourseCards(courses);
-      })
-      .catch(error => console.error('Error fetching courses:', error));
+    // Initial generation of course cards
+    generateCourseCards();
 
     // Event listener for search input
     document.getElementById('searchInput').addEventListener('input', filterCourses);
