--- a/index.html
+++ b/index.html
@@ -1,52 +1,109 @@
-<script>
-  // Function to fetch course data from JSON file
-  async function fetchCourses() {
-    try {
-      const response = await fetch('courses.json');
-      const data = await response.json();
-      return data;
-    } catch (error) {
-      console.error('Error fetching courses:', error);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Course Catalog</title>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
     }
-  }
 
-  // Function to generate course cards
-  async function generateCourseCards() {
-    const courses = await fetchCourses();
-    const courseList = document.getElementById('courseList');
-    courses.forEach(course => {
-      const card = document.createElement('div');
-      card.classList.add('course-card');
-      card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites}</div>`;
-      card.addEventListener('click', () => {
-        const description = card.querySelector('.course-description');
-        if (description.style.display === 'block') {
-          description.style.display = 'none';
+    #courseList {
+      max-width: 600px;
+      width: 100%;
+    }
+
+    .course-card {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    .course-card:hover {
+      background-color: #f0f0f0;
+    }
+
+    .course-description {
+      display: none;
+    }
+
+    #searchInput {
+      width: 100%;
+      max-width: 600px;
+      padding: 10px;
+      margin: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+  </style>
+</head>
+<body>
+  <input type="text" id="searchInput" placeholder="Search for courses...">
+  <div id="courseList">
+    <!-- Course cards will be dynamically added here -->
+  </div>
+
+  <script>
+    // Function to fetch course data from JSON file
+    async function fetchCourses() {
+      try {
+        const response = await fetch('courses.json');
+        const data = await response.json();
+        return data;
+      } catch (error) {
+        console.error('Error fetching courses:', error);
+      }
+    }
+
+    // Function to generate course cards
+    async function generateCourseCards() {
+      const courses = await fetchCourses();
+      const courseList = document.getElementById('courseList');
+      courses.forEach(course => {
+        const card = document.createElement('div');
+        card.classList.add('course-card');
+        card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites}</div>`;
+        card.addEventListener('click', () => {
+          const description = card.querySelector('.course-description');
+          if (description.style.display === 'block') {
+            description.style.display = 'none';
+          } else {
+            description.style.display = 'block';
+          }
+        });
+        courseList.appendChild(card);
+      });
+    }
+
+    // Function to filter courses based on search input
+    function filterCourses() {
+      const searchInput = document.getElementById('searchInput').value.toLowerCase();
+      const courseCards = document.querySelectorAll('.course-card');
+      courseCards.forEach(card => {
+        const courseTitle = card.querySelector('div').textContent.toLowerCase();
+        if (courseTitle.includes(searchInput)) {
+          card.style.display = 'block';
         } else {
-          description.style.display = 'block';
+          card.style.display = 'none';
         }
       });
-      courseList.appendChild(card);
-    });
-  }
+    }
 
-  // Function to filter courses based on search input
-  function filterCourses() {
-    const searchInput = document.getElementById('searchInput').value.toLowerCase();
-    const courseCards = document.querySelectorAll('.course-card');
-    courseCards.forEach(card => {
-      const courseTitle = card.querySelector('div').textContent.toLowerCase();
-      if (courseTitle.includes(searchInput)) {
-        card.style.display = 'block';
-      } else {
-        card.style.display = 'none';
-      }
-    });
-  }
+    // Initial generation of course cards
+    generateCourseCards();
 
-  // Initial generation of course cards
-  generateCourseCards();
-
-  // Event listener for search input
-  document.getElementById('searchInput').addEventListener('input', filterCourses);
-</script>
+    // Event listener for search input
+    document.getElementById('searchInput').addEventListener('input', filterCourses);
+  </script>
+</body>
+</html>
