--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       courses.forEach(course => {
         const card = document.createElement('div');
         card.classList.add('course-card');
-        card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites}</div>`;
+        card.innerHTML = `<div>${course["code"]} - ${course["title"]}</div><div class="course-description"><strong>Description:</strong> ${course["description"]}<br><strong>Units:</strong> ${course["units"]}<br><strong>Prerequisites:</strong> ${course["prerequisites"]}</div>`;
         card.addEventListener('click', () => {
           const description = card.querySelector('.course-description');
           if (description.style.display === 'block') {
