--- a/index.html
+++ b/index.html
@@ -53,57 +53,58 @@
     <!-- Course cards will be dynamically added here -->
   </div>
 
-  <script>
-    // Function to fetch course data from JSON file
-    async function fetchCourses() {
-      try {
-        const response = await fetch('courses.json');
-        const data = await response.json();
-        return data;
-      } catch (error) {
-        console.error('Error fetching courses:', error);
-      }
+<script>
+  // Function to fetch course data from JSON file
+  async function fetchCourses() {
+    try {
+      const response = await fetch('courses.json');
+      const data = await response.json();
+      return data;
+    } catch (error) {
+      console.error('Error fetching courses:', error);
     }
+  }
 
-    // Function to generate course cards
-    async function generateCourseCards() {
-      const courses = await fetchCourses();
-      const courseList = document.getElementById('courseList');
-      courses.forEach(course => {
-        const card = document.createElement('div');
-        card.classList.add('course-card');
-        card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites || "None"}</div>`;
-        card.addEventListener('click', () => {
-          const description = card.querySelector('.course-description');
-          if (description.style.display === 'block') {
-            description.style.display = 'none';
-          } else {
-            description.style.display = 'block';
-          }
-        });
-        courseList.appendChild(card);
-      });
-    }
-
-    // Function to filter courses based on search input
-    function filterCourses() {
-      const searchInput = document.getElementById('searchInput').value.toLowerCase();
-      const courseCards = document.querySelectorAll('.course-card');
-      courseCards.forEach(card => {
-        const courseTitle = card.querySelector('div').textContent.toLowerCase();
-        if (courseTitle.includes(searchInput)) {
-          card.style.display = 'block';
+  // Function to generate course cards
+  async function generateCourseCards() {
+    const courses = await fetchCourses();
+    console.log(courses); // Add this line to check the structure of the courses array
+    const courseList = document.getElementById('courseList');
+    courses.forEach(course => {
+      const card = document.createElement('div');
+      card.classList.add('course-card');
+      card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites || "None"}</div>`;
+      card.addEventListener('click', () => {
+        const description = card.querySelector('.course-description');
+        if (description.style.display === 'block') {
+          description.style.display = 'none';
         } else {
-          card.style.display = 'none';
+          description.style.display = 'block';
         }
       });
-    }
+      courseList.appendChild(card);
+    });
+  }
 
-    // Initial generation of course cards
-    generateCourseCards();
+  // Function to filter courses based on search input
+  function filterCourses() {
+    const searchInput = document.getElementById('searchInput').value.toLowerCase();
+    const courseCards = document.querySelectorAll('.course-card');
+    courseCards.forEach(card => {
+      const courseTitle = card.querySelector('div').textContent.toLowerCase();
+      if (courseTitle.includes(searchInput)) {
+        card.style.display = 'block';
+      } else {
+        card.style.display = 'none';
+      }
+    });
+  }
 
-    // Event listener for search input
-    document.getElementById('searchInput').addEventListener('input', filterCourses);
-  </script>
+  // Initial generation of course cards
+  generateCourseCards();
+
+  // Event listener for search input
+  document.getElementById('searchInput').addEventListener('input', filterCourses);
+</script>
 </body>
 </html>
