--- a/index.html
+++ b/index.html
@@ -103,8 +103,12 @@
   // Initial generation of course cards
   generateCourseCards();
 
-  // Event listener for search input
-  document.getElementById('searchInput').addEventListener('input', filterCourses);
+// Event listener for search input
+document.getElementById('searchInput').addEventListener('keyup', function(event) {
+  if (event.key === 'Enter') {
+    filterCourses();
+  }
+});
 </script>
 </body>
 </html>
