--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
   <style>
     body {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
     }
 
+    #sidebar {
+      width: 200px;
+      height: 100%;
+      background-color: #f0f0f0;
+      padding: 20px;
+    }
+
     #courseList {
       max-width: 600px;
       width: 100%;
+      padding: 20px;
     }
 
     .course-card {
       border: 1px solid #ccc;
       border-radius: 5px;
       padding: 10px;
-      margin: 10px;
+      margin-bottom: 10px;
       cursor: pointer;
     }
 
@@ -38,9 +46,17 @@
 
     #searchInput {
       width: 100%;
-      max-width: 600px;
       padding: 10px;
-      margin: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+
+    #departmentSelect {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
       box-sizing: border-box;
@@ -48,67 +64,99 @@
   </style>
 </head>
 <body>
-  <input type="text" id="searchInput" placeholder="Search for courses...">
+  <div id="sidebar">
+    <input type="text" id="searchInput" placeholder="Search for courses...">
+    <select id="departmentSelect">
+      <option value="">All Departments</option>
+      <!-- Department options will be dynamically added here -->
+    </select>
+  </div>
+
   <div id="courseList">
     <!-- Course cards will be dynamically added here -->
   </div>
 
-<script>
-  // Function to fetch course data from JSON file
-  async function fetchCourses() {
-    try {
-      const response = await fetch('courses.json');
-      const data = await response.json();
-      return data;
-    } catch (error) {
-      console.error('Error fetching courses:', error);
+  <script>
+    // Function to fetch course data from JSON file
+    async function fetchCourses() {
+      try {
+        const response = await fetch('courses.json');
+        const data = await response.json();
+        return data;
+      } catch (error) {
+        console.error('Error fetching courses:', error);
+      }
     }
-  }
 
-  // Function to generate course cards
-  async function generateCourseCards() {
-    const courses = await fetchCourses();
-    console.log(courses); // Add this line to check the structure of the courses array
-    const courseList = document.getElementById('courseList');
-    courses.forEach(course => {
-      const card = document.createElement('div');
-      card.classList.add('course-card');
-      card.innerHTML = `<div>${course.code.slice(0, 4)} ${course.code.slice(4)} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites || "None"}</div>`;
-      card.addEventListener('click', () => {
-        const description = card.querySelector('.course-description');
-        if (description.style.display === 'block') {
-          description.style.display = 'none';
+    // Function to fetch department data from JSON file
+    async function fetchDepartments() {
+      try {
+        const response = await fetch('departments.json');
+        const data = await response.json();
+        return data;
+      } catch (error) {
+        console.error('Error fetching departments:', error);
+      }
+    }
+
+    // Function to generate department options
+    async function generateDepartmentOptions() {
+      const departments = await fetchDepartments();
+      const departmentSelect = document.getElementById('departmentSelect');
+      departments.forEach(department => {
+        const option = document.createElement('option');
+        option.value = department.code;
+        option.textContent = department.name;
+        departmentSelect.appendChild(option);
+      });
+    }
+
+    // Function to generate course cards
+    async function generateCourseCards() {
+      const courses = await fetchCourses();
+      const courseList = document.getElementById('courseList');
+      courseList.innerHTML = ''; // Clear previous content
+      courses.forEach(course => {
+        const card = document.createElement('div');
+        card.classList.add('course-card');
+        card.innerHTML = `<div>${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites || "None"}</div>`;
+        card.addEventListener('click', () => {
+          const description = card.querySelector('.course-description');
+          if (description.style.display === 'block') {
+            description.style.display = 'none';
+          } else {
+            description.style.display = 'block';
+          }
+        });
+        courseList.appendChild(card);
+      });
+    }
+
+    // Function to filter courses based on search input and department
+    function filterCourses() {
+      const searchInput = document.getElementById('searchInput').value.toLowerCase();
+      const departmentFilter = document.getElementById('departmentSelect').value;
+      const courseCards = document.querySelectorAll('.course-card');
+      courseCards.forEach(card => {
+        const courseTitle = card.querySelector('div').textContent.toLowerCase();
+        const courseDepartment = card.querySelector('div').textContent.split(' ')[0];
+        if ((courseTitle.includes(searchInput) || searchInput === '') && (departmentFilter === '' || courseDepartment === departmentFilter)) {
+          card.style.display = 'block';
         } else {
-          description.style.display = 'block';
+          card.style.display = 'none';
         }
       });
-      courseList.appendChild(card);
-    });
-  }
+    }
 
-  // Function to filter courses based on search input
-  function filterCourses() {
-    const searchInput = document.getElementById('searchInput').value.toLowerCase();
-    const courseCards = document.querySelectorAll('.course-card');
-    courseCards.forEach(card => {
-      const courseTitle = card.querySelector('div').textContent.toLowerCase();
-      if (courseTitle.includes(searchInput)) {
-        card.style.display = 'block';
-      } else {
-        card.style.display = 'none';
-      }
-    });
-  }
+    // Initial generation of course cards and department options
+    generateCourseCards();
+    generateDepartmentOptions();
 
-  // Initial generation of course cards
-  generateCourseCards();
+    // Event listener for search input
+    document.getElementById('searchInput').addEventListener('input', filterCourses);
 
-// Event listener for search input
-document.getElementById('searchInput').addEventListener('keyup', function(event) {
-  if (event.key === 'Enter') {
-    filterCourses();
-  }
-});
-</script>
+    // Event listener for department select
+    document.getElementById('departmentSelect').addEventListener('change', filterCourses);
+  </script>
 </body>
 </html>
