--- a/index.html
+++ b/index.html
@@ -141,12 +141,13 @@ async function generateCourseCards() {
     const card = document.createElement('div');
     card.classList.add('course-card');
     card.innerHTML = `<div>${course.department} ${course.code} - ${course.title}</div><div class="course-description"><strong>Description:</strong> ${course.description}<br><strong>Units:</strong> ${course.units}<br><strong>Prerequisites:</strong> ${course.prerequisites || "None"}</div>`;
+    const description = card.querySelector('.course-description');
+    description.style.maxHeight = 0; // Set initial max height to 0
     card.addEventListener('click', () => {
-      const description = card.querySelector('.course-description');
-      if (description.style.maxHeight) {
-        description.style.maxHeight = null;
-      } else {
+      if (description.style.maxHeight === '0px') {
         description.style.maxHeight = description.scrollHeight + 'px';
+      } else {
+        description.style.maxHeight = '0px';
       }
     });
     courseList.appendChild(card);
