--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Planner Section -->
+    <div class="planner">
+      <div class="planner-header">
+        <h2>Course Planner</h2>
+        <button onclick="addTerm()">Add Term</button>
+      </div>
+      <div id="termsContainer" class="terms-container">
+        <!-- Term cards will be added here -->
+      </div>
+    </div>
+
     <div class="container">
         <!-- Left sidebar with search -->
         <div class="sidebar">
