--- a/index.html
+++ b/index.html
@@ -1,65 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transfer Planner - Course Catalog</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Transfer Planner Home</title>
+  <link rel="stylesheet" href="home.css" />
 </head>
 <body>
-<!-- Top Navigation Bar -->
-<nav class="top-nav">
-  <button onclick="showView('catalog')">Course Catalog</button>
-  <button onclick="showView('planner')">Course Planner</button>
-</nav>
+  <!-- Top Navigation Bar -->
+  <nav class="top-nav">
+    <a href="catalog/index.html"><button>Course Catalog</button></a>
+    <a href="planner/index.html"><button>Course Planner</button></a>
+  </nav>
 
-<!-- Catalog View -->
-<div id="catalogView">
-  <div class="container">
-    <!-- Left sidebar with search -->
-    <div class="sidebar">
-      <h2>Course Search</h2>
-      <div class="search-filters">
-        <select id="institution">
-          <option value="all">All Institutions</option>
-          <option value="San Diego Miramar College">San Diego Miramar College</option>
-          <option value="UC Berkeley">UC Berkeley</option>
-        </select>
-        <input type="text" id="search" placeholder="Search courses...">
-        <select id="department">
-          <option value="all">All Departments</option>
-          <option value="Mathematics">Mathematics</option>
-          <option value="Computer Science">Computer Science</option>
-          <option value="Physics">Physics</option>
-        </select>
-      </div>
+  <!-- Homepage Content -->
+  <div class="homepage">
+    <h1>Welcome to the Transfer Planner</h1>
+    <p>Plan your academic path with an easy-to-use course catalog and drag-and-drop planner.</p>
+    <div class="nav-buttons">
+      <a href="catalog/index.html">Explore Catalog</a>
+      <a href="planner/index.html">Start Planning</a>
     </div>
-
-    <!-- Course cards -->
-    <div class="courses-grid" id="coursesContainer"></div>
   </div>
-
-  <!-- Pagination -->
-  <div class="pagination">
-    <button id="prevPage">Previous</button>
-    <span id="currentPage">1</span>
-    <button id="nextPage">Next</button>
-  </div>
-</div>
-
-<!-- Planner View -->
-<div id="plannerView" style="display: none;">
-  <div class="planner">
-    <div class="planner-header">
-      <h2>Course Planner</h2>
-      <button onclick="addTerm()">Add Term</button>
-    </div>
-    <div id="termsContainer" class="terms-container"></div>
-  </div>
-</div>
-
-
-    <!-- Link to your JavaScript file -->
-    <script src="script.js"></script>
 </body>
 </html>
