--- a/planner/index.html
+++ b/planner/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  
+  <div class="course-pool">
+    <h3>Courses for Selected Programs</h3>
+    <div id="coursePool" class="course-pool-list"></div>
+  </div>
+
   <!-- Top Navigation Bar -->
   <nav class="top-nav">
     <a href="../catalog/index.html"><button>Course Catalog</button></a>
