--- a/planner/index.html
+++ b/planner/index.html
@@ -7,12 +7,6 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  
-  <div class="course-pool">
-    <h3>Courses for Selected Programs</h3>
-    <div id="coursePool" class="course-pool-list"></div>
-  </div>
-
   <!-- Top Navigation Bar -->
   <nav class="top-nav">
     <a href="../catalog/index.html"><button>Course Catalog</button></a>
@@ -28,8 +22,12 @@
     </select>
   </div>
 
-  <!-- Planner View -->
+  <!-- Main Layout -->
   <div id="plannerView">
+    <div class="course-pool">
+      <h3>Courses for Selected Programs</h3>
+      <div id="coursePool" class="course-pool-list"></div>
+    </div>
     <div class="planner">
       <div class="planner-header">
         <h2>Course Planner</h2>
